sas-bases/components/security/network/networking.k8s.io/ingress/nginx.ingress.kubernetes.io/front-door-tls/sas-data-sources-transformers.yaml
---
apiVersion: builtin
kind: PatchTransformer
metadata:
  name: sas-v1-ingress-sas-data-connections-front-door-tls-transformer
patch: |-
  - op: add
    path: /metadata/annotations/sas.com~1tls-mode
    value: front-door
  - op: add
    path: /spec/tls
    value: [{hosts: [$(INGRESS_HOST), '*.$(INGRESS_HOST)'], secretName: sas-ingress-certificate}]
target:
  version: v1
  kind: Ingress
  name: sas-data-connections
vars:
- name: INGRESS_HOST
  objref:
    kind: ConfigMap
    name: ingress-input
    apiVersion: v1
  fieldref:
    fieldpath: data.INGRESS_HOST
---
apiVersion: builtin
kind: PatchTransformer
metadata:
  name: sas-v1-ingress-sas-data-sources-front-door-tls-transformer
patch: |-
  - op: add
    path: /metadata/annotations/sas.com~1tls-mode
    value: front-door
  - op: add
    path: /spec/tls
    value: [{hosts: [$(INGRESS_HOST), '*.$(INGRESS_HOST)'], secretName: sas-ingress-certificate}]
target:
  version: v1
  kind: Ingress
  name: sas-data-sources
vars:
- name: INGRESS_HOST
  objref:
    kind: ConfigMap
    name: ingress-input
    apiVersion: v1
  fieldref:
    fieldpath: data.INGRESS_HOST
---
apiVersion: builtin
kind: PatchTransformer
metadata:
  name: sas-v1-ingress-sas-data-tables-front-door-tls-transformer
patch: |-
  - op: add
    path: /metadata/annotations/sas.com~1tls-mode
    value: front-door
  - op: add
    path: /spec/tls
    value: [{hosts: [$(INGRESS_HOST), '*.$(INGRESS_HOST)'], secretName: sas-ingress-certificate}]
target:
  version: v1
  kind: Ingress
  name: sas-data-tables
vars:
- name: INGRESS_HOST
  objref:
    kind: ConfigMap
    name: ingress-input
    apiVersion: v1
  fieldref:
    fieldpath: data.INGRESS_HOST
---
apiVersion: builtin
kind: PatchTransformer
metadata:
  name: sas-v1-ingress-sas-row-sets-front-door-tls-transformer
patch: |-
  - op: add
    path: /metadata/annotations/sas.com~1tls-mode
    value: front-door
  - op: add
    path: /spec/tls
    value: [{hosts: [$(INGRESS_HOST), '*.$(INGRESS_HOST)'], secretName: sas-ingress-certificate}]
target:
  version: v1
  kind: Ingress
  name: sas-row-sets
vars:
- name: INGRESS_HOST
  objref:
    kind: ConfigMap
    name: ingress-input
    apiVersion: v1
  fieldref:
    fieldpath: data.INGRESS_HOST
